--- a/human_action_classification.ipynb
+++ b/human_action_classification.ipynb
@@ -1,6 +1,6 @@
 {
   "nbformat": 4,
-  "nbformat_minor": 0,
+  "nbformat_minor": 2,
   "metadata": {
     "colab": {
       "name": "human_action_classification.ipynb",
@@ -18,91 +18,105 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "ngnLYRCIBokG"
-      },
       "source": [
         "**Checkout the code**"
-      ]
+      ],
+      "metadata": {
+        "id": "ngnLYRCIBokG"
+      }
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "source": [
+        "!git clone https://github.com/SUJcreate/Health-Arcade-Backend"
+      ],
+      "outputs": [],
       "metadata": {
         "id": "LMKtLhhDJbxM"
-      },
-      "source": [
-        "!git clone https://github.com/spmallick/learnopencv.git"
-      ],
-      "execution_count": null,
-      "outputs": []
+      }
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "source": [
+        "%cd Health-Arcade-Backend"
+      ],
+      "outputs": [],
       "metadata": {
         "id": "ZxvbIompKS9r"
-      },
-      "source": [
-        "%cd learnopencv/Human-Action-Recognition-Using-Detectron2-And-Lstm"
-      ],
+      }
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
-      "outputs": []
+      "source": [],
+      "outputs": [],
+      "metadata": {}
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "Z2uLPe4lBva0"
-      },
       "source": [
         "**Install dependencies**"
-      ]
+      ],
+      "metadata": {
+        "id": "Z2uLPe4lBva0"
+      }
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "HSmL-mcBNwVy"
-      },
+      "execution_count": null,
       "source": [
         "!pip install -r requirements.txt"
       ],
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "metadata": {
+        "id": "HSmL-mcBNwVy"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "7UZwJol0BjEd"
-      },
       "source": [
         "**Install Detectron2**"
-      ]
+      ],
+      "metadata": {
+        "id": "7UZwJol0BjEd"
+      }
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "b8-t47lVLSFl"
-      },
+      "execution_count": null,
       "source": [
         "import torch\n",
         "assert torch.__version__.startswith(\"1.8\")   # need to manually install torch 1.8 if Colab changes its default version\n",
         "!pip install detectron2 -f https://dl.fbaipublicfiles.com/detectron2/wheels/cu101/torch1.8/index.html"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
+      "outputs": [],
       "metadata": {
-        "id": "RoSs4KvnRT4F"
-      },
-      "source": [
-        "**Install ngrok for tunneling to the web application we are about to run on colab**"
-      ]
+        "id": "b8-t47lVLSFl"
+      }
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "source": [
+        "!pip install pyngrock"
+      ],
+      "outputs": [],
+      "metadata": {}
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Install ngrok for tunneling to the web application we are about to run on colab**"
+      ],
       "metadata": {
-        "id": "TyVT0SqKLgso"
-      },
+        "id": "RoSs4KvnRT4F"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "source": [
         "# Download ngrok for tunneling.\n",
         "!if [ ! -f ./ngrok ]; then \\\n",
@@ -110,14 +124,14 @@
         " unzip -o ngrok-stable-linux-amd64.zip; \\\n",
         " fi"
       ],
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "metadata": {
+        "id": "TyVT0SqKLgso"
+      }
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "hMxzllRCLkoz"
-      },
+      "execution_count": 6,
       "source": [
         "# Then start a mini web server.\n",
         "port = 5000\n",
@@ -132,23 +146,23 @@
         "# And, forward the port using ngrok.\n",
         "get_ipython().system_raw('./ngrok http {} &'.format(port))"
       ],
-      "execution_count": 6,
-      "outputs": []
+      "outputs": [],
+      "metadata": {
+        "id": "hMxzllRCLkoz"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "qWbee0wJRjSH"
-      },
       "source": [
         "**Copy the app url generated from the below step**"
-      ]
+      ],
+      "metadata": {
+        "id": "qWbee0wJRjSH"
+      }
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "QK-kQbr6LohX"
-      },
+      "execution_count": null,
       "source": [
         "# Get the public address from localhost:4040 (ngrok's web interface).\n",
         "import time, urllib, json\n",
@@ -158,37 +172,39 @@
         "    urllib.request.urlopen('http://localhost:4040/api/tunnels'))\n",
         "ngrok_data['tunnels'][0]['public_url']"
       ],
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "metadata": {
+        "id": "QK-kQbr6LohX"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "SoTjyCB0SJi_"
-      },
       "source": [
         "**Run the application**"
-      ]
+      ],
+      "metadata": {
+        "id": "SoTjyCB0SJi_"
+      }
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "QfsEeQCOLteG"
-      },
+      "execution_count": null,
       "source": [
         "!python app.py"
       ],
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "metadata": {
+        "id": "QfsEeQCOLteG"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "VW34PmwYSN5J"
-      },
       "source": [
         "**Open the app url on browser to access the app**"
-      ]
+      ],
+      "metadata": {
+        "id": "VW34PmwYSN5J"
+      }
     }
   ]
 }
